--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,29 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/gradlew
+/gradlew.bat
+/.idea/.gitignore
+/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+/.gradle/buildOutputCleanup/cache.properties
+/.gradle/7.4/checksums/checksums.lock
+/.idea/compiler.xml
+/.gradle/7.4/dependencies-accessors/dependencies-accessors.lock
+/.gradle/7.4/executionHistory/executionHistory.bin
+/.gradle/7.4/executionHistory/executionHistory.lock
+/.gradle/file-system.probe
+/.gradle/7.4/fileHashes/fileHashes.bin
+/.gradle/7.4/fileHashes/fileHashes.lock
+/.gradle/7.4/dependencies-accessors/gc.properties
+/.gradle/7.4/gc.properties
+/.gradle/vcs-1/gc.properties
+/.idea/gradle.xml
+/gradle/wrapper/gradle-wrapper.properties
+/.idea/jarRepositories.xml
+/.gradle/7.4/fileChanges/last-build.bin
+/.idea/Lesson1.iml
+/.gradle/7.4/checksums/md5-checksums.bin
+/.idea/misc.xml
+/.gradle/buildOutputCleanup/outputFiles.bin
+/.gradle/7.4/checksums/sha1-checksums.bin
+/.idea/vcs.xml
